# deepurbanism-cms

./: .env.sample  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  schema.json
django/: Dockerfile  nginx.example
django/website/: .gitignore  pyproject.toml  run.sh  shell.sh
django/website/requirements/: dev.txt  production.txt  req_base.txt
django/website/wagtail_vue/apps/pages/: models.py
django/website/wagtail_vue/apps/pages/migrations/: 0001_initial.py  0002_alter_flexpage_content.py  0003_basic_structure.py  0004_auto_20211213_1415.py  0005_alter_post_body.py  0006_alter_post_body.py  0007_auto_20211214_1327.py  0008_alter_post_body.py  0009_pagesettings.py  0010_pagesettings_impressum_footer.py  0011_alter_post_body.py  0012_auto_20211221_2146.py
django/website/wagtail_vue/wagtail_vue/: api.py  routing.py  urls.py
django/website/wagtail_vue/wagtail_vue/settings/: dev.py  production.py  settings_base.py
